--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ futures = "0.3.29"
 futures-util = "0.3.29"
 hyper = { version = "0.14.27", features = ["http1", "http2"] }
 log = "0.4.20"
+pin-project = "1.1.3"
 prost = "0.12.1"
 thiserror = "1.0.50"
 tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
 tonic = "0.10.2"
 tonic-reflection = "0.10.2"
-tower = "0.4.13"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
 
