--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
 rustls-pemfile = "1.0.3"
 tokio-rustls = "0.24.1"
 tls-listener = { version = "0.8.0", features = ["rustls", "hyper-h1", "hyper-h2"] }
+futures-util = "0.3.29"
 
 [build-dependencies]
 tonic-build = "0.10.2"
