--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ hyper = { version = "0.14.27", features = ["http1", "http2"] }
 log = "0.4.20"
 pin-project = "1.1.3"
 prost = "0.12.1"
-rustls = { version = "0.21.8", features = ["quic"] }
+rustls = "0.21.8"
 tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
 tonic = "0.10.2"
 tonic-reflection = "0.10.2"
